# ifj-59

./: .gitignore  CMakeLists.txt  Makefile  Přednášky  README.md  error_handler.c  error_handler.h  expressions.c  expressions.h  fStack.h  garbage_collector.c  garbage_collector.h  generator.c  generator.h  iStack.c  iStack.h  ial.c  ial.h  instrstack.c  instrstack.h  interpret.c  interpret.h  lexical_analyzer.c  lexical_analyzer.h  main.c  main.h  makefile  parser.c  parser.h  return.h  rozdeleni  stack.c  stack.h  string.c  string.h  table.c  table.h  tests.c  typedef.c  typedef.h
testing/: fac_iter.ifj  sem1.ifj16  sem10.ifj16  sem15.ifj16  sem16.ifj16  sem2.ifj16  sem20.ifj16  sem23.ifj16  sem24.ifj16  sem26.ifj16  sem27.ifj16  sem28.ifj16  sem31.ifj16  sem32.ifj16  sem33.ifj16  sem34.ifj16  sem38.ifj16  sem43.ifj16  sem44.ifj16  sem45.ifj16  sem5.ifj16  sem6.ifj16  sem8.ifj16  sem9.ifj16  string.ifj  synt1.ifj16  synt7.ifj16  syntax02.ifj  syntax03.ifj  test.sh  test1.ifj  test_precedence.ifj16  tests.c
testing/test_files/: fac_iter.ifj
tests/: class_test.ifj  fac_rec.ifj16  run1.ifj16  sem11.ifj16  sem12.ifj16  sem13.ifj16  sem14.ifj16  sem17.ifj16  sem18.ifj16  sem19.ifj16  sem21.ifj16  sem22.ifj16  sem25.ifj16  sem29.ifj16  sem3.ifj16  sem30.ifj16  sem35.ifj16  sem36.ifj16  sem37.ifj16  sem39.ifj16  sem4.ifj16  sem40.ifj16  sem41.ifj16  sem42.ifj16  sem46.ifj16  sem7.ifj16  synt4.ifj16  synt5.ifj16  synt6.ifj16  test.sh  test1.ifj16  test_precedence.ifj16
